# rust_nostdlibs_demo_linux_kernel

./: readme.md
hello-json/: Cargo.toml  Kbuild  Makefile
hello-json/src/: lib.rs
hello-rhai/: Cargo.toml  Kbuild
hello-rhai/src/: lib.rs
