[package]
name = "hello-world"
version = "0.1.0"
authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
linux-kernel-module = { path = ".." }
serde = { version = "1", default-features = false , features = ["derive"] }
serde-json-core = "0.1"
typenum = "1"
