[package]
name = "hello-world"
version = "0.1.0"
authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
linux-kernel-module = { path = ".." }
rhai = { features = [ "no_std" ], default_features = false }
#wee_alloc = { version = "0.4.5", default_features = false }
